--- a/main.css
+++ b/main.css
@@ -250,4 +250,28 @@ body
     transform: translate(-50%, -50%);
     border-radius: 6px;
     padding: 5px;
+    width: 200px;
+}
+
+.modal .button
+{
+    font-family: Purisa;
+    border: none;
+    margin-left: 50%;
+    /* margin-top: 50%; */
+    transform: translateX(-50%);
+    width: 200px;
+    border-radius: 6px;
+    padding: 5px;
+    height: 25px;
+    background-color: purple;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
 }
